...
              children: <Widget>[
                Container(
                  margin: EdgeInsets.symmetric(vertical: 4),
                  width: double.infinity,
                  height: BUTTON_HEIGHT,
                  child: FlatButton(
                    key: Key('sign-in-btn'),
                    color: oxfordBlue,
                    onPressed: () => _validateLogin(),
                    child: Text(
                      SIGN_IN_STRING,
                      style: TextStyle(color: platinum),
                    ),
...
